include/Tilengine.h

		typedef unsigned char	uint8_t;	/*!< unsigned 8-bit wide data */
		typedef unsigned short	uint16_t;	/*!< unsigned 16-bit wide data */
		typedef unsigned int	uint32_t;	/*!< unsigned 32-bit wide data */
typedef unsigned char bool;		/*!< C++ bool type for C language */
/*! Tile item for Tilemap access methods */
typedef struct Tile
{
	uint16_t index;		/*!< tile index */
	uint16_t flags;		/*!< attributes (FLAG_FLIPX, FLAG_FLIPY, FLAG_PRIORITY) */
}
Tile;
typedef struct Engine*		 TLN_Engine;			/*!< Engine context */
typedef struct Tilemap*		 TLN_Tilemap;			/*!< Opaque tilemap reference */
typedef struct Palette*		 TLN_Palette;			/*!< Opaque palette reference */
typedef struct Bitmap*		 TLN_Bitmap;			/*!< Opaque bitmap reference */
typedef void(*TLN_VideoCallback)(int scanline);
/*! Error codes */
typedef enum
{
	TLN_ERR_OK,				/*!< No error */
	TLN_ERR_OUT_OF_MEMORY,	/*!< Not enough memory */
	TLN_ERR_IDX_LAYER,		/*!< Layer index out of range */
	TLN_ERR_IDX_SPRITE,		/*!< Sprite index out of range */
	TLN_ERR_IDX_ANIMATION,	/*!< Animation index out of range */
	TLN_ERR_IDX_PICTURE,	/*!< Picture or tile index out of range */
	TLN_ERR_REF_TILESET,	/*!< Invalid TLN_Tileset reference */
	TLN_ERR_REF_TILEMAP,	/*!< Invalid TLN_Tilemap reference */
	TLN_ERR_REF_SPRITESET,	/*!< Invalid TLN_Spriteset reference */
	TLN_ERR_REF_PALETTE,	/*!< Invalid TLN_Palette reference */
	TLN_ERR_REF_SEQUENCE,	/*!< Invalid TLN_Sequence reference */
	TLN_ERR_REF_SEQPACK,	/*!< Invalid TLN_SequencePack reference */
	TLN_ERR_REF_BITMAP,		/*!< Invalid TLN_Bitmap reference */
	TLN_ERR_NULL_POINTER,	/*!< Null pointer as argument */ 
	TLN_ERR_FILE_NOT_FOUND,	/*!< Resource file not found */
	TLN_ERR_WRONG_FORMAT,	/*!< Resource file has invalid format */
	TLN_ERR_WRONG_SIZE,		/*!< A width or height parameter is invalid */
	TLN_ERR_UNSUPPORTED,	/*!< Unsupported function */
	TLN_MAX_ERR,
}
TLN_Error;
/** 
 * \anchor group_setup
 * \name Setup
 * Basic setup and management */
/**@{*/
TLNAPI TLN_Engine TLN_Init (int hres, int vres, int numlayers, int numsprites, int numanimations);
TLNAPI void TLN_Deinit (void);
TLNAPI int TLN_GetWidth (void);
TLNAPI int TLN_GetHeight (void);
TLNAPI uint32_t TLN_GetNumObjects (void);
TLNAPI uint32_t TLN_GetUsedMemory (void);
TLNAPI uint32_t TLN_GetVersion (void);
TLNAPI int TLN_GetNumLayers (void);
TLNAPI int TLN_GetNumSprites (void);
TLNAPI void TLN_SetBGColor (uint8_t r, uint8_t g, uint8_t b);
TLNAPI bool TLN_SetBGColorFromTilemap (TLN_Tilemap tilemap);
TLNAPI void TLN_DisableBGColor (void);
TLNAPI bool TLN_SetBGBitmap (TLN_Bitmap bitmap);
TLNAPI bool TLN_SetBGPalette (TLN_Palette palette);
TLNAPI void TLN_SetRasterCallback (TLN_VideoCallback);
TLNAPI void TLN_SetFrameCallback (TLN_VideoCallback);
TLNAPI void TLN_SetRenderTarget (uint8_t* data, int pitch);
TLNAPI void TLN_UpdateFrame (int time);
TLNAPI void TLN_BeginFrame (int time);
TLNAPI bool TLN_DrawNextScanline (void);
TLNAPI void TLN_SetLoadPath (const char* path);
TLNAPI void TLN_SetCustomBlendFunction (uint8_t (*blend_function)(uint8_t src, uint8_t dst));
/**@}*/

/** 
 * \anchor group_errors
 * \name Errors
 * Error handling */
/**@{*/
TLNAPI void TLN_SetLastError (TLN_Error error);
TLNAPI TLN_Error TLN_GetLastError (void);
TLNAPI const char *TLN_GetErrorString (TLN_Error error);
TLNAPI int  TLN_GetAvailableSprite (void);