src/Palette.h

/* color definition */
typedef union
{
	struct
	{
		uint8_t b, g, r, a;
	};
	uint32_t value;
}
Color;